--- a/packages/embed/package.json
+++ b/packages/embed/package.json
@@ -8,8 +8,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "@zyg-js/core": "workspace:*"
+  },
   "devDependencies": {
     "typescript": "^5.5.3",
-    "vite": "^5.4.1"
+    "vite": "^5.4.8"
   }
 }
