--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -29,7 +29,8 @@
     "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@zyg-js/core": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
