--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,5 +34,8 @@
     "typescript": "^5.5.3",
     "vite": "^5.4.8",
     "vite-plugin-dts": "^4.2.4"
+  },
+  "dependencies": {
+    "zod": "^3.23.8"
   }
 }
