--- a/packages/widget/package.json
+++ b/packages/widget/package.json
@@ -20,9 +20,12 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-router": "^1.58.11",
+    "@zyg-js/core": "workspace:*",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "defaults": "^3.0.0",
+    "immer": "^10.1.1",
     "lucide-react": "^0.446.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,7 +33,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
-    "@zyg-js/core": "workspace:*"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
